add additional features

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -5,6 +5,20 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    This is the content for the body of the page.
+    <p>This is the content for the body of the page.</p>
+    <p>This is a second paragraph. This paragraph has <strong>bold text</strong> and <em>italicized text</em> in it </p>
+    <p>This paragraph has an unordered list and an ordered list.
+      <ul>
+        <li>This is point 1</li>
+        <li>This is point 2</li>
+        <li>This is point 3</li>
+      </ul>
+      <ol>
+        <li>This is the first one</li>
+        <li>This is the second one</li>
+        <li>This is the third and final one</li>
+      </ol>
+    </p>
+    <a href="https://www.wikipedia.org">Wikipedia link</a>
   </body>
 </html>
