--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -5,5 +5,20 @@
 </head>
 <body>
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/Mauritius_Road_Signs_-_Warning_Sign_-_Other_dangers.svg/556px-Mauritius_Road_Signs_-_Warning_Sign_-_Other_dangers.svg.png" alt="Warning Image" />
+<p>Photo by Kingroyos
+<a href="https://upload.wikimedia.org/wikipedia/commons/e/ea/Mauritius_Road_Signs_-_Warning_Sign_-_Other_dangers.svg">Original Image</a>
+<a href="https://creativecommons.org/licenses/by-sa/3.0/deed.en">Image License</a>
+</p>
 </body>
+<footer>
+  <nav>
+  <ul>
+    <li><a href="../index.html">Homepage</a></li>
+    <li><a href="../contact.html">Contact Page</a></li>
+    <li><a href="../product_details.html">Product Details</a></li>
+    <li><a href="waiver.html">Legal Waiver</a></li>
+  </ul>
+</nav>
+</footer>
 </html>
