practice table added

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,27 @@
       <td>Content 3 for R3</td>
      </tr>
   </table>
+  <br>
+<table border=1>
+    <tr>
+      <th>Header 1</th>
+      <th>Header 2</th>
+      <th>Header 3</th>
+    </tr>
+    <tr>
+      <td>Cell 1</td>
+      <td>Cell 2</td>
+      <td>Cell 3</td>
+    </tr>
+    <tr>
+      <td>A</td>
+      <td rowspan="2">2 Row Cell</td>
+      <td>C</td>
+    </tr>
+    <tr>
+      <td>Bottom left</td>
+      <td>Bottom right</td>
+    </tr>
+</table>
   </body>
 </html>
