--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -29,9 +29,8 @@
       <th>Header 3</th>
     </tr>
     <tr>
-      <td>Cell 1</td>
+      <td colspan="2">2 column cell</td>
       <td>Cell 2</td>
-      <td>Cell 3</td>
     </tr>
     <tr>
       <td>A</td>
