complete gps 2.1 assignment

--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -1,8 +1,8 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Fangfei Li
+2. Brian Gothberg
+We spent [1] hour on this challenge.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
@@ -10,6 +10,7 @@ We spent [#] hours on this challenge.
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>This is the title.</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="#">  <!-- Insert a link to the stylesheet here -->
     <title>Git Cheat Sheet</title>
@@ -24,7 +25,7 @@ We spent [#] hours on this challenge.
         This cheat sheet summarizes commonly used Git command line
         instructions for quick reference.</p>
     </header>
-
+    <img src="https://d13yacurqjgara.cloudfront.net/users/50579/screenshots/1631047/scalacat.png" alt="Octocat in a tie">
     <section class="column-1">
       <article>
         <h2>INSTALL GIT</h2>
@@ -277,7 +278,7 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!--REFECTION: Didn't feel especially confident but did not have any issues googling answers and applying it to our CSS. Learning competencies went well, anything we got stuck on we were able to find an answer for online. The navigator typically googled while the driver experimented with the code.-->
   </body>
 </html>
 Contact GitHub API Training Shop Blog About
